server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tev1
  labels:
    name: tev1
    environment: production
